--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.8",
+        "phpstan/phpstan": "^0.9.1",
         "symfony/dotenv": "^4.0",
         "symfony/maker-bundle": "^1.0",
         "symfony/web-server-bundle": "^4.0"
